--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
+    "postcss": "^8.4.49",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.4.14",
     "vite-plugin-checker": "^0.8.0"
   },
   "engines": {
